Toolbar: Fix bookmarks not showing properly

--- a/src/toolbar.less
+++ b/src/toolbar.less
@@ -121,6 +121,10 @@ body:focus-within {
     border: 0 !important;
 }
 
+#launcher-pane .component {
+    flex-direction: row !important;
+}
+
 #launcher-pane .global-menu-button {
     background-image: none !important;
     font-size: 23px !important;
